--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -20,6 +20,10 @@
           font-size : 10px;
         }
     }
+    p {
+      font-weight: 100;
+      font-size: 0.9rem;
+    }
   }
 
   .home-title-padding {
@@ -60,7 +64,8 @@
     background-color: white;
     text-align: center;
       @include for-tablet-landscape-up {
-        border: 1px solid $conscients-very-light-grey;
+        // border: 1px solid $conscients-very-light-grey;
+        border: 1px solid rgba(0,0,0,.125);
         height: 85%;
         width: 38%;
         position: absolute;
